tests/specs/test/markdown_full_block_names/main.out
Check [WILDCARD]/main.md$5-8.js
Check [WILDCARD]/main.md$17-20.ts
error: TS2322 [ERROR]: Type 'number' is not assignable to type 'string'.
    const a: string = 42;
          ^
    at [WILDCARD]/main.md$17-20.ts:2:11
